# lisco

./: .gitignore  AUTHORS  DEPENDENCIES  Makefile.am  Makefile.in  NEWS  README  README-hacking  README.md  THANKS  TODO  aclocal.m4  autogen.sh  bootstrap.conf  config.h.in  configure  configure-local  configure.ac  configure.in  game.001  game.002  log  log.001  log.002  output  uncrustify.cfg
lib/: Makefile.am  Makefile.in  error.c  error.h
libchi/: .gitignore  Makefile.am  Makefile.in  apply_move.c  bitmasks.c  bitmasks.h  bitv2shift.c  char2figurine.c  check_legality.c  chitest.c  clear_position.c  closest_prime.c  coordinate_notation.c  coords2label.c  dump-bitboard.c  dump_pieces.c  fen.c  free.c  game_over.c  genmasks.c  illegal_move.c  init_position.c  legal_moves.c  libchi.h.in  make_move.c  mm_init.c  movegen.c  movegen_color.c  parse_epd.c  parse_fen_position.c  parse_move.c  perft.c  piece2char.c  print_move.c  see.c  set_piece.c  set_position.c  shift2label.c  showfen.c  strerror.c  (+10 more)
libchi/tests/: Makefile.am  Makefile.in  check_libchi.c  generate_legal_moves_test.pl  pgn2test.pl  test_coordinate_notation.c  test_fen.c  test_game_over.c  test_legal_moves.c  test_move_making.c  test_move_making_pgn.c  test_parsers.c  test_presentation.c  test_see.c
m4/: Makefile.am  Makefile.in
src/: Makefile.am  Makefile.in  basename.h  board.c  board.h  book.c  book.h  brain.c  brain.h  display-board.c  display-board.h  edit.c  edit.h  engine.c  engine.h  epd.c  ev_hash.c  evaluate.c  game.003  initialize.c  lisco.c  lisco.h  liscoplay-engine.c  liscoplay-engine.h  liscoplay-game.c  liscoplay-game.h  liscoplay-loop.c  liscoplay-loop.h  liscoplay-option.c  liscoplay-option.h  liscoplay-time-control.c  liscoplay-time-control.h  liscoplay.c  log.001  log.002  log.003  log.c  log.h  move-list.c  move-selector.c  (+50 more)
src/tests/: Makefile.am  Makefile.in  check_common.c  check_dm1  check_dm2  check_dm3  check_lisco.c  check_liscoplay.c  check_mates  check_move_list.c  check_perft.c  check_search.c  check_tate.c  check_tateplay.c  epd-suites.pl  evaluate-material-only.c  run_epd.pl  solve_epd.pl  test_game.c  test_lisco_time_control.c  test_move_list.c  test_move_selector.c  test_perft.c  test_quiescence.c  test_tate_time_control.c  test_time_control.c  test_transposition_table.c  test_uci.c  test_uci_engine.c  test_util.c  test_xboard.c
src/tests/epd/: dm1.epd  dm2.epd  dm3.epd  mate.epd  mates.epd
src/tests/perllib/: .gitignore  Makefile.PL
src/tests/perllib/lib/: EPDParser.pm
src/tests/perllib/t/: 00base.t  01ids.epd  01ids.expect  01ids.t  01ids.t.ptkdb
