## Process this file with automake to produce Makefile.in
# (w) Guido Flohr
## $Id: Makefile.am,v 1.4 2001/09/10 12:09:55 guido Exp $
# Process Makefile.in with autoconf to produce Makefile

AUTOMAKE_OPTIONS = 1.5 gnu no-dependencies
ACLOCAL_AMFLAGS = -I m4
SUBDIRS = lib libchi src

EXTRA_DIST = m4/gnulib-cache.m4
